Agregados input en tabla para modificar valores y descripcion

--- a/cotizacion.html
+++ b/cotizacion.html
@@ -30,7 +30,7 @@
                     <p><input name="nombre" type="text" placeholder="Nombre del solicitante" required></p>
                     <p><input name="cuit" type="text" placeholder="CUIL o CUIT" required></p>
                     <p><input name="email" type="email" placeholder="Email" required></p>
-                    <p><input name="telefono" type="number" placeholder="Teléfono" required></p>
+                    <p><input name="telefono" type="tel" placeholder="Teléfono" required></p>
                 </td>
                 <td>
                     <input name="vendedor" type="text" placeholder="Ejecutivo de Ventas" required>
@@ -126,6 +126,9 @@
             </button>
         </div>
     </div>
+    <footer>
+        <p>&copy; <span id="year">2025</span> - Powered by <a href="mailto:pablodem32@gmail.com">Pablo Demateo</a></p>
+    </footer>
 </body>
 
 </html>
