--- a/index.html
+++ b/index.html
@@ -113,6 +113,10 @@
     </div>
     <!-- toast notification -->
     <div id="toast-container"></div>
+    <footer>
+        <p>&copy; <span id="year">2025</span> - Powered by <a href="mailto:pablodem32@gmail.com">Pablo Demateo</a></p>
+    </footer>
+    
 </body>
 
 </html>
