--- a/index.html
+++ b/index.html
@@ -105,15 +105,15 @@
             <!-- Opcionales se cargarán dinámicamente con JavaScript -->
         </section>
     </main>
-    <div id="modal" class="modal">
+    <article id="modal" class="modal">
         <div class="modal-content">
             <span class="close">&times;</span>
             <p id="modal-text"></p>
         </div>
-    </div>
+    </article>
     <!-- toast notification -->
-    <div id="toast-container"></div>
-    <footer>
+    <aside id="toast-container" role="alert"></aside>
+    <footer class="footer">
         <p>&copy; <span id="year"></span> - Powered by Pablo Demateo</p>
         <p id="emailContact">📧 pablodem32@gmail.com</p>
     </footer>
