--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
     <!-- toast notification -->
     <aside id="toast-container" role="alert"></aside>
     <footer class="footer">
-        <p>&copy; <span id="year"></span> - Powered by Pablo Demateo</p>
+        <p>&copy; <span id="year"></span> - Desarrollado por Pablo Demateo</p>
         <p id="emailContact">📧 pablodem32@gmail.com</p>
     </footer>
     
