--- a/cotizacion.html
+++ b/cotizacion.html
@@ -127,7 +127,7 @@
         </div>
     </div>
     <footer>
-        <p>&copy; <span id="year"></span> - Powered by Pablo Demateo</p>
+        <p>&copy; <span id="year"></span> - Desarrollado por Pablo Demateo</p>
         <p id="emailContact">📧 pablodem32@gmail.com</p>
     </footer>
     
